--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div class="inner">
 
         <header>
-          <h1>Blog</h1>
-          <h2>blog</h2>
+          <h1>ACKING'S BLOG</h1>
+          <h2>记录与分享 | Record & Share</h2>
         </header>
 
         <section id="downloads" class="clearfix">
