--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script language="javascript" type="text/javascript">
+      if (location.href == "http://acking.github.io/blog/") {
+        window.location.replace("http://acshow.net/");
+      }
+    </script>
     <title>Blog by acking</title>
   </head>
 
