--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <![endif]-->
     <script language="javascript" type="text/javascript">
       if (location.href == "http://acking.github.io/blog/") {
+        alert('1');
         window.location.replace("http://acshow.net/");
       }
     </script>
